# poc-claude

./: .gitguardian.yml  .gitignore  CLAUDE.md  product_backlog.yaml
.claude/: settings.local.json
.claude/agents/: developer.md  frontend-developer.md  quality-reviewer.md  security-reviewer.md  test-reviewer.md
.claude/skills/review-pr/: SKILL.md
.github/workflows/: claude-review.yml
backend/: CLAUDE.md  pyproject.toml
backend/src/taskflow/: __init__.py  app.py  auth.py  auth_router.py  database.py  db_models.py  repositories.py  schemas.py  search_router.py  task_router.py
backend/tests/: conftest.py  test_auth.py  test_database.py  test_integration.py  test_repositories.py  test_schemas.py  test_search.py
docs/poc-agent-teams-mistica/: 00-INDICE.md  01-configuracao-inicial.md  02-backlog-mistica.md  03-setup-board-github.md  04-prompt-lead.md  05-fluxo-execucao.md  06-cenario-seguranca.md  07-troubleshooting.md
docs/poc-config/: CLAUDE.md  setup-poc.sh
docs/poc-config/agents/: frontend-developer.md  security-reviewer.md  test-reviewer.md
docs/poc-config/workflows/: claude-review.yml
docs/tasks/: etapa-01-setup-repo.md  etapa-02-criar-github-project.md  etapa-03-configurar-github-action.md  etapa-04-configurar-agents.md  etapa-05-configurar-skills.md  etapa-06-habilitar-teams.md  etapa-07-atualizar-backlog.md  etapa-08-iniciar-poc.md  etapa-09-gravar-demo.md  slide-01-poc-overview.md  slide-02-poc-dag.md  slide-03-poc-architecture.md  slide-04-poc-agents.md  slide-05-poc-lifecycle.md  slide-06-poc-demo.md
frontend/: CLAUDE.md  next.config.mjs  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: Footer.tsx  Navbar.tsx  ProtectedRoute.tsx  StatusBadge.tsx  TaskCard.tsx
frontend/src/lib/: api.ts  auth.tsx  theme.ts
(+3 files in other folders)
